tests/syntax_error/0b2.jou
def foo() -> int:
    a = 0b0
    a = 0b1
    a = 0b2  # Error: invalid number or variable name "0b2"
